# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added llmnr-resolve script which resolves a hostname by using the LLMNR
  (Link-Local Multicast Name Resolution) protocol.  [Hani Benhabiles]

o [NSE] Added broadcast-igmp-discovery script which discovers and outputs
  interesting information from targets that have multicast groups memberships.
  [Hani Benhabiles]

o Scripts can now return a structured name-value table so that results
  are queryable from XML output. Scripts can return a string as before,
  or a table, or a table and a string. In this last case, the table will
  go to XML output and the string will go to screen output.
  [Daniel Miller, David Fifield, Patrick Donnelly]

o [NSE] Added JDWP library, jdwp-info, jdwp-exec and jdwp-inject scripts and
  needed classes. [Aleksandar Nikolic]

o [NSE] Added a BJNP library and the scripts broadcast-bjnp-discover and
  bjnp-discover. [Patrik Karlsson]

o [NPING] Nping now prints out an error and exists when the user tries to use
  the -p flag for a scan option where that is meaningless. [Sean Rivera] 

o [NSE] Added smb-print-text script which prints specified text using SMB 
  shared printer. [Aleksandar Nikolic]

o [NSE] Added mrinfo script which queries a target router for multicast
  information. [Hani Benhabiles]

o [NSE] Added ssl-date script which gets server's time from SSL ServerHello
  reply server random part. [Aleksandar Nikolic]

o [NSE] Added smb-vuln-ms10-61 script which checks the target system for MS10-061
  vulenrability in spoolss service in a safe way. [Aleksandar Nikolic]

o [NSE] Added spoolss functions and constrants to msrpc.lua. [Aleksandar Nikolic]

o [NSE] Reduced the number of names tried by http-vhosts by default.
  [Vlatko Kosturjak]

o Linux unreachable routes are now properly ignored. [David Fifield]

o [NSE] Added smb-vuln-ms10-054 script which check the target system for MS10-054
  vulnerability in SMB. [Aleksandar] 
